# orca

./: .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  ORCA_DESIGN_DIGEST.md  README.md
.claude/: settings.json
.github/workflows/: auto-merge.yml
app/: gpu_pipeline.cu  gpu_pipeline.hpp  identity_app.hpp  main.cpp
channel/: cir_expand.cpp  cir_expand.hpp  cir_loader.cpp  cir_loader.hpp  cir_table.hpp  cir_writer.cpp  cir_writer.hpp  doppler.hpp
common/: complex.hpp  dims.hpp  layout.hpp  philox.hpp  spsc_ring.hpp  symbol_id.hpp
docs/: MILESTONES.md  architecture.md  deferred-goals.md
docs/decisions/: 0001-hot-path-synchronization.md  0002-multi-cell-interference-mobility.md  0003-throughput-latency-pipeline.md  0004-vue-interface-ipc.md  0005-su-mimo-phase1.md  0006-beam-indexed-precoding.md  0007-process-topology-doca-deferral.md  0008-geometric-path-channel-storage.md  0009-cell-count-scaling.md
docs/specs/: cir-table-toolchain.md  fronthaul-packet-format.md  gpu-kernel-design.md  oru-interface-contract.md  timing-and-deadlines.md  vue-interface-contract.md
dsp/: awgn.cpp  awgn.hpp  channel_apply.cpp  channel_apply.hpp  combine.cpp  combine.hpp  convert.cpp  convert.cu  convert.hpp  kernels.cu  kernels.cuh  precode.cpp  precode.hpp
fh/: cplane.hpp  eaxc.hpp  fh_header.hpp  uplane.hpp
orchestr/: jitter.hpp  symbol_ring.hpp  timing.hpp
oru/: oru_loopback.hpp  oru_shm.hpp  oru_transport.hpp
oru_process/: main.cpp  oru_engine.hpp
scenario/: association.hpp  beam_codebook.hpp  channel_refresh.hpp  doppler_handoff.hpp  grid.hpp  scenario_state.hpp  vec3.hpp  victim_map.hpp
tests/: CMakeLists.txt  check.hpp  test_association.cpp  test_channel_apply.cpp  test_channel_refresh.cpp  test_cir_table.cpp  test_combine.cpp  test_convert_cuda.cu  test_doppler_handoff.cpp  test_e2e_identity.cpp  test_fh.cpp  test_golden_pipeline.cpp  test_grid.cpp  test_ipc.cpp  test_layout.cpp  test_oru_process.cpp  test_philox.cpp  test_precode.cpp  test_ring.cpp  test_scenario_state.cpp  test_slow_plane_pipeline.cpp  test_timing.cpp  test_transport_loopback.cpp  vdu_stub.hpp
vue/: vue_loopback.hpp  vue_shm.hpp  vue_stub.hpp  vue_transport.hpp
